# rust-cpp

./: .gitignore  Cargo.toml  README.markdown
example/: .gitignore  Cargo.toml  Makefile  build.rs  cpp.cpp  cpp.h  gen-bindings.rs  main  main.rs  mycpplib.rs  rust.cpp
example/cpp-lib/: Makefile  cpp.cpp  cpp.h
example/mycpplib/: Makefile  mycpplib.cpp  mycpplib.h
plugin/: Cargo.toml  Cargo.toml~  lib.rs  lib.rs~
src/: gen_cpp.rs  gen_header.rs  gen_rs.rs  intercalate.rs  lib.rs  types.rs
