[package]
name = "example"
version = "0.0.0"
authors = []
build = "build.rs"

[[bin]]
name = "example"
path = "main.rs"

[build-dependencies.cpp-bindgen]
path = ".."

[build-dependencies.bindgen]
git = "https://github.com/crabtw/rust-bindgen"

[dependencies]
libc = "*"

[dependencies.cpp-bindgen-plugin]
path = "../plugin"